Added transaction support to MappedFieldsTracker
This fixes https://github.com/DozerMapper/dozer/issues/739. Side-effects in MappedFieldsTracker, that occur when creating a comparison object for list mapping with relationship-type="non-cumulative", can now be isolated in a transaction and individually rollbacked if a matching item is found and should be used instead.